--- a/src/components/layout/header.module.scss
+++ b/src/components/layout/header.module.scss
@@ -2,4 +2,19 @@
 	background-color: #111111;
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
+	padding: 0 20px;
+	height: 50px;
+	a {
+		display: flex;
+		align-items: center;
+	}
+}
+
+.headerLogo{
+	filter: invert(1);
+}
+
+.userImage {
+	border-radius: 100%;
 }
