--- a/src/components/layout/header.module.scss
+++ b/src/components/layout/header.module.scss
@@ -1,10 +1,12 @@
+@import './_variables.scss';
+
 .header {
-	background-color: #111111;
+	background-color: $navbar-background;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 0 20px;
-	height: 50px;
+	padding: $navbar-padding;
+	height: $navbar-height;
 	a {
 		display: flex;
 		align-items: center;
