--- a/src/components/layout/header.module.scss
+++ b/src/components/layout/header.module.scss
@@ -5,7 +5,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: $navbar-padding;
+	padding: 0 $navbar-side-padding;
 	height: $navbar-height;
 	a {
 		display: flex;
@@ -13,10 +13,16 @@
 	}
 }
 
-.headerLogo{
+.logoContainer{
+	margin-left: -$navbar-side-padding;
+	padding-left: $navbar-side-padding;
+	@include sidebar-width();
+}
+
+.logo{
 	filter: invert(1);
 }
 
-.userImage {
+.userUmage {
 	border-radius: 100%;
 }
