--- a/src/components/layout/sidebar.module.scss
+++ b/src/components/layout/sidebar.module.scss
@@ -1,10 +1,11 @@
+@import './variables';
+
 .sidebar {
 	display: flex;
 	flex-direction: column;
 	padding: 20px 0;
 	padding-right: 20px;
-	min-width: 30vw;
-	max-width: 500px;
+	@include sidebar-width();
 
 	li {
 		width: 100%;
